objects/LLC_BI__Policy_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Additional Comments for user to add to Policy Exception</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please add any additional comments not captured anywhere else on Policy Exception.</inlineHelpText>
        <label>Policy/Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Board_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Policy__c</fullName>
        <description>Policy value dataloaded</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Product_Package__c</fullName>
        <description>This field holds the product package of the loan that has this PE created</description>
        <formula>CASESAFEID(LLC_BI__Loan__r.LLC_BI__Product_Package__c)</formula>
        <label>Product Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Automatically_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is automatically populated and indicates if this Policy Exception was added automatically from an automated policy exception function, or if it was manually entered by a user.</description>
        <label>Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Code__c</fullName>
        <description>This field is automatically populated based on the &quot;code&quot; field set in the policy exception template record for this policy exception. It specifies the code assigned to the policy exception. When the policy exception is selected based on the predefined template this field will be populated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Mgmt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field made available only when a policy exception with the &quot;collateral&quot; type is selected.  This field allows the user to look up the collateral record the policy exception is related to. This is a smart lookup only showing the collateral records that are already associated to the loan this exception is being applied to.</description>
        <label>Collateral Mgmt</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Policy Exceptions</relationshipLabel>
        <relationshipName>Policy_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant_Mgmt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field made available only when a policy exception with the &quot;Covenant&quot;  type is selected.  This field allows the user to look up the Covenant record the policy exception is related to. This is a smart lookup only showing the Covenants that are already associated to the loan this exception is being applied to.</description>
        <label>Covenant Mgmt</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipLabel>Policy Exceptions</relationshipLabel>
        <relationshipName>Policy_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically populated when creating a policy exception from the loan. This field links the Loan with the Policy Exception record being created.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Policy Exceptions</relationshipLabel>
        <relationshipName>Policy_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mitigation_Reason_1__c</fullName>
        <description>This field is used to specify the primary mitigation reason from the preconfigured mitigation reasons that are applicable to the selected policy exception. The user can select up to 3 reasons to mitigate the policy exception. A mitigation reason is required to mitigate an exception for users without the modifying policy exception status configuration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mitigation Reason 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mitigation_Reason_2__c</fullName>
        <description>This field is used to specify the secondary mitigation reason from the preconfigured mitigation reasons that are applicable to the selected policy exception. The user can select up to 3 reasons to mitigate the policy exception. A mitigation reason is required to mitigate an exception for users without the modifying policy exception status configuration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mitigation Reason 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mitigation_Reason_3__c</fullName>
        <description>This field is used to specify the tertiary mitigation reason from the preconfigured mitigation reasons that are applicable to the selected policy exception. The user can select up to 3 reasons to mitigate the policy exception. A mitigation reason is required to mitigate an exception for users without the modifying policy exception status configuration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mitigation Reason 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a look up field available when setting a policy exception. This field allows the user to look up the relationship associated with the Policy Exception. This is a smart lookup only showing the relationships associated to the loan through entity involvement.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Policy Exceptions</relationshipLabel>
        <relationshipName>Policy_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Severity_Value__c</fullName>
        <description>This field is an optional field to specify a severity value associated with the Policy Exception. This field can be removed or edited through the field sets that drive the modal and the table view for policy exceptions.</description>
        <label>Severity Value</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Severity__c</fullName>
        <description>This field is an optional field that allows the user to select the severity of the Policy Exception. The possible values the user can select are determined by the Policy Exception template. Only one can be selected when applying a policy exception to a loan. This field is optional and can be removed or edited from the modal or table view for policy exceptions.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Severity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field can be manually selected or automatically populated. This field specifies the status of the exception. For users with the appropriate permission to edit an exception status without mitigating reasons can manually select the status. Users without this permission will have the status automatically set when an action (such as mitigating reasons) are added to the policy exception.</description>
        <label>Exception status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mitigated</fullName>
                </value>
                <value>
                    <fullName>Unmitigated</fullName>
                    <default>true</default>
                    <label>Unmitigated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is required and defines the type of the Policy Exception. This field allows financial institutions to filter policy exceptions based on the type and select the appropriate template to apply to the loan. The type field can be accessed to remove, edit or add specific types that are pertinent to the financial institution&apos;s business practice.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Policy Exception</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Policy_Exception_VR_Exception_Status</fullName>
        <active>true</active>
        <description>Rule to prevent user from selecting Waived as a Status for Policy Exception</description>
        <errorConditionFormula>AND( $User.No_Validation__c  &lt;&gt; true , ISCHANGED(LLC_BI__Status__c), ISPICKVAL(LLC_BI__Status__c, &apos;Waived&apos;) )</errorConditionFormula>
        <errorMessage>Exception Status must be Mitigated or Unmitigated</errorMessage>
    </validationRules>
</CustomObject>